style.css
body {
  background-color: #024766;
  margin: 0;
  overflow-x: hidden;
  width: 100vw;
}

h1 {
  transform: skewY(-7deg);
  text-transform: uppercase;
  border-bottom: 10px solid #ff404e;
  border-top: 10px solid #ff404e;
  display: inline-block;
  padding: 0.25rem;
  font-family: "Helvetica";
  font-size: 6.5rem;
  text-align: center;
  color: #ff404e;
}

h4 {
  font-family: "Helvetica", sans;
  color: white;
  margin: 0;
  padding: 1rem 2rem;
}

.title {
  width: 50%;
  margin: 0;
  float: left;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

li {
  padding: 0.9rem 2rem;
  font-family: "Lato";
  position: relative;
}

li:hover {
  background-color: #ff404e;
}

a {
  cursor: pointer;
  color: white;
  text-decoration: none;
}

.current {
  color: gray;
}

.menu-link {
  float: right;
  font-family: "Lato";
  font-size: 1.5rem;
  margin: 0;
  padding: 0.25rem 2rem;
  user-select: none;
}

.menu {
  width: 25%;
  height: 8.9rem;
  position: absolute;
  right: 0;
  background-color: #012d41;
  margin-top: 3rem;
  margin-right: -25%;
  transition: margin 1s;
}

.open {
  margin-right: 0rem;
}

p {
  color: white;
  text-align: justify;
  font-family: "Lato", sans-serif;
  margin-top: 2rem;
}

.p-width {
  max-width: 24rem;
  margin: 15rem auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.text-cont {
  height: 50%;
  width: 50%;
  text-align: center;
}

.center {
  margin: auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.nav {
  padding: 0;
  width: 100%;
  height: 3rem;
  background-color: #012d41;
}

.log {
  left: 0;
}

.skew {
  height: 400px;
  transform: skewY(-7deg);
  position: relative;
  top: 42rem;
  background-color: #ff404e;
}

.content p {
  transform: skewY(7deg);
  max-width: 24rem;
  margin: 8rem auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.img-break {
  height: 50rem;
  width: 100%;
  position: absolute;
  margin-top: 30rem;
  z-index: -1;

  background-image: url("https://cdn.stocksnap.io/img-thumbs/960w/KMAO0W7U2Z.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.p-squeeze {
  width: 50%;
}

.third-section {
  margin-top: 30rem;
  background-color: #024766;
  height: 15rem;
}

@media only screen and (max-width: 750px) {
  h1 {
    font-size: 5rem;
  }

  .cont-text {
    width: 80%;
  }

  .menu {
    width: 100%;
    margin-right: -100%;
    z-index: 99;
  }
  .open {
    margin-right: 0;
  }

  .p-squeeze {
    width: 80%;
  }

  .text-cont {
    width: 80%;
  }

  .content p {
    margin: 5rem auto;
  }
}

